add trading widget

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -119,23 +119,23 @@
       </div>
       <div class="widget__message-wrap widget__message-wrap--right">
         <div class="widget__message">
-          <div class="widget__message-nickname">Tamb221</div>
+          <div class="widget__message-nickname">Igor</div>
           <p class="widget__message-text">it's too soon to say it as scam guys</p>
         </div>
         <div class="widget__message-icon">
           <img src="" alt="">
-          <span>T</span>
+          <span>I</span>
         </div>
         <div class="widget__message-time">10:32</div>
       </div>
       <div class="widget__message-wrap widget__message-wrap--right">
         <div class="widget__message">
-          <div class="widget__message-nickname">Tamb221</div>
+          <div class="widget__message-nickname"></div>
           <p class="widget__message-text">it's too soon to say it as scam guys</p>
         </div>
         <div class="widget__message-icon">
           <img src="" alt="">
-          <span>T</span>
+          <span>I</span>
         </div>
         <div class="widget__message-time">10:32</div>
       </div>
