--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -62,11 +62,11 @@
   </div>
   <div class="widget__content">
     <div class="tabs widget__tabs">
-      <button class="tabs__item tabs__item--active">BTC</button>
-      <button class="tabs__item">ETH</button>
-      <button class="tabs__item">ATH</button>
-      <button class="tabs__item">FIAT</button>
-      <button class="tabs__item">Favorites</button>
+      <button class="tabs__item tabs__item--small tabs__item--active">BTC</button>
+      <button class="tabs__item tabs__item--small">ETH</button>
+      <button class="tabs__item tabs__item--small">ATH</button>
+      <button class="tabs__item tabs__item--small">FIAT</button>
+      <button class="tabs__item tabs__item--small">Favorites</button>
     </div>
     <!--table mob start-->
     <table class="table widget__table widget__table--mob">
