--- a/src/app/dashboard/orders/orders.component.html
+++ b/src/app/dashboard/orders/orders.component.html
@@ -60,9 +60,13 @@
     </div>
   </div>
   <div class="widget__content">
+    <div class="tabs widget__tabs">
+      <button class="tabs__item  tabs__item--active">Open orders (<span>3</span>)</button>
+      <button class="tabs__item ">History</button>
+    </div>
     <app-open-orders></app-open-orders>
 
-    <app-orders-history></app-orders-history>
+    <!--<app-orders-history></app-orders-history>-->
   </div>
 </div>
 
