--- a/src/assets/scss/components/_row.scss
+++ b/src/assets/scss/components/_row.scss
@@ -2,4 +2,13 @@
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
+
+  /*--- modificators start ---*/
+  &--jcsb{
+    justify-content: space-between;
+  }
+  &--aic{
+    align-items: center;
+  }
+  /*--- modificators end ---*/
 }
