--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -60,9 +60,13 @@
     </div>
   </div>
   <div class="widget__content">
+    <div class="tabs widget__tabs">
+      <button class="tabs__item tabs__item--big tabs__item--active">Buy BTC</button>
+      <button class="tabs__item tabs__item--big">Sell BTC</button>
+    </div>
     <app-buy></app-buy>
 
-    <app-sell></app-sell>
+    <!--<app-sell></app-sell>-->
   </div>
 </div>
 
