add open orders widget

--- a/src/app/dashboard/orders/orders.component.html
+++ b/src/app/dashboard/orders/orders.component.html
@@ -1,4 +1,4 @@
-<div class="widget">
+<div class="widget widget--gradient">
   <div class="widget__header">
     <span class="widget__name">My <span>BTC / USD</span> orders</span>
     <a href="#" class="widget__question">
