--- a/src/app/dashboard/trading/buy/buy.component.html
+++ b/src/app/dashboard/trading/buy/buy.component.html
@@ -27,7 +27,7 @@
           50%
         </span>
       </label>
-      <label class="radio radio--mr16">
+      <label class="radio">
         <input class="radio__input" type="radio" name="radio-procent">
         <span class="radio__text">
           100%
