--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,8 +7,9 @@
 @import "components/page-title";
 @import "components/title";
 @import "components/subtitle";
-@import "components/table";
 @import "components/btn";
+@import "components/arrow";
+@import "components/table";
 @import "components/input";
 @import "components/input-file";
 @import "components/select";
